# Eelbrain

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  env-dev.yml  env-readthedocs.yml  env-test.yml  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bugreport.yml
.github/workflows/: lint.yml  python-package-conda.yml  wheels.yml
doc/: changes.rst  conf.py  development.rst  experiment.rst  installing.rst  publications.bib  reference.rst
doc/scripts/: cache.json  find_publications.py
eelbrain/: __init__.py  _celltable.py  _colorspaces.py  _data_obj.py  _exceptions.py  _info.py  _meeg.py  _mne.py  _table.py  _text.py  _types.py  fmtxt.py  gui.py  pipeline.py
eelbrain/_experiment/: __init__.py  configuration.py  covariance.py  definitions.py  derivative_cache.py  epochs.py  events.py  exceptions.py  experiment.py  groups.py  gui.py  load_pipeline.py  mne_experiment.py  parc.py  pathing.py  pipeline.py  preprocessing.py  reports.py  results.py  source.py  state_model.py  test_def.py  two_stage.py  variable_def.py
eelbrain/_experiment/tests/: BIDS_experiment.py  Phantom_experiment.py  Somatomotor_experiment.py  sample_experiment.py  sample_experiment_sessions.py  test_definitions.py  test_derivative_cache.py  test_epochs.py  test_experiment.py  test_mne_experiment.py  test_pipeline.py  test_sample_experiment.py  test_visit.py
eelbrain/_io/: cnd.py  fiff.py  pickle.py  stc_dataset.py  txt.py
eelbrain/_io/tests/: test_mne.py
eelbrain/_ndvar/: ndvar.py
eelbrain/_ndvar/tests/: test_ndvar.py
eelbrain/_stats/: adjacency_opt.pyx  glm.py  permutation.py  spm.py  test.py  testnd.py
eelbrain/_stats/tests/: test_glm.py  test_stats.py  test_test.py  test_testnd.py
eelbrain/_trf/: _boosting.py  _predictors.py  shared.py
eelbrain/_utils/: basic.py  numpy_utils.py  r_bridge.py
eelbrain/_utils/ui/: wx_ui.py
eelbrain/_wxgui/: app.py  droptarget.py  frame.py  history.py  load_stcs.py  mpl_canvas.py  pipeline_gui.py  select_components.py  select_epochs.py  text.py  utils.py
eelbrain/_wxgui/tests/: test_select_epochs.py
eelbrain/datasets/: _alice.py  _simple.py
eelbrain/load/: eyelink.py
eelbrain/mne_fixes/: _version.py
eelbrain/plot/: _base.py  _brain.py  _brain_object.py  _colors.py  _figure.py  _glassbrain.py  _line.py  _sensors.py  _styles.py  _topo.py  _uts.py  _utsnd.py  _uv.py
eelbrain/plot/tests/: test_base.py  test_uts.py
eelbrain/report/: _uv.py
eelbrain/testing/: __init__.py  _testing.py  data.py  r_bridge.py
eelbrain/tests/: test_data.py  test_examples.py  test_load_pipeline.py  test_mne.py
examples/datasets/: group-level-analysis.py
examples/imagenet/: ImageNet.py  imagenet.py  prepare_mris.py  prepare_trans.py
examples/mass-univariate-statistics/: volume-source-space.py
examples/mouse/: mouse.py
examples/somatomotor/: prepare_mris.py  somatomotor.py
