[build-system]
requires = [
    "setuptools >= 64.0.0",
    "wheel >= 0.37.0",
    "numpy >= 2,< 3",  # build code 2.0 and 1.x compatible
    "cython >= 3",
    ]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {email = 'christianbrodbeck@nyu.edu', name = 'Christian Brodbeck'},
]
classifiers = [
  'Natural Language :: English',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Unix',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.9',
]
dependencies = [
  'appnope',
  'colormath >= 2.1',
  'keyring >= 5',
  'libclang',
  'matplotlib >= 3.6',
  'mne >= 1',
  'nibabel >= 2.5',
  'numpy >= 1.20',
  'pillow',
  'psutils',
  'pymatreader',
  'scipy >= 1.5',
  'seaborn',
]
description='MEG/EEG analysis tools'
keywords = [
  'meg',
  'eeg',
  'temporal response function',
  'python',
]
license = 'BSD-3-Clause'
license-files = ['LICENSE.txt']
maintainers = [
  {email = 'christianbrodbeck@nyu.edu', name = 'Christian Brodbeck'},
  {email = 'proloyd94@gmail.com', name = 'Proloy Das'},
]
name = 'eelbrain'
readme = 'README.md'
requires-python = '>=3.8'
dynamic = ["version"]

[project.optional-dependencies]
all = [
  'eelbrain[full]',
  'eelbrain[test]',
]
brain = [
  'pysurfer[save_movie]',
  'nilearn >=0.10.4'
]
gui = [
    'ipdb',
    'ipython',
    'colormath >= 2.1',
    'tqdm >= 4.40',
    'wxpython >= 4.0.3, != 4.1.0',
]
full = [
  'eelbrain[brain]',
  'eelbrain[gui]',
]
style = [
  'codespell[toml] >= 2.2.4',
  'ruff >= 0.6.0',
  'toml-sort',
  'yamllint',
]
test = [
  'flake8',
  'pytest-cov',
  'pytest >=8.0, < 8.1.1',
  'pytest-faulthandler',
  'pingouin'
]

[tool.cibuildwheel]
# 3.11 is abi3 -- could build 3.9 3.10 etc. but let's keep it simple (SPEC0 is 3.12
# as of 2025/11 anyway, but building for 3.11+ is good enough) and skip pypy as well
build = "cp311-*"
archs = ["native"]
before-build = "pip install abi3audit"
test-requires = [
    "pytest",
    "pingouin",
]
test-command = "pytest -m \"not (slow or framework_build or file_test)\" -rsx -v --pyargs eelbrain"

[tool.cibuildwheel.linux]
repair-wheel-command = [
  "auditwheel repair -w {dest_dir} {wheel}",
  "abi3audit --strict --report --verbose {wheel}",
]

[tool.cibuildwheel.macos]
archs = ["native"]
environment = { MACOSX_DEPLOYMENT_TARGET="11", SKIP_N_WORKERS_TESTS="1" }
# https://mac.r-project.org/openmp/
before-all = [
  "wget https://mac.r-project.org/openmp/openmp-19.1.0-darwin20-Release.tar.gz",
  "sudo tar -xzC / -f openmp-19.1.0-darwin20-Release.tar.gz"
]
repair-wheel-command = [
  "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}",
  "abi3audit --strict --report --verbose {wheel}",
]

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel abi3audit"
repair-wheel-command = [
  "delvewheel repair -w {dest_dir} {wheel}",
  "abi3audit --strict --report --verbose {wheel}",
]

[tool.tomlsort]
all = true
ignore_case = true
spaces_before_inline_comment = 2
trailing_comma_inline_array = true

[project.urls]
documentation = 'https://eelbrain.readthedocs.io'
homepage = 'https://eelbrain.readthedocs.io'
source = 'https://github.com/Eelbrain/eelbrain'
tracker = 'https://github.com/Eelbrain/eelbrain/issues'

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ['eelbrain*']

[tool.setuptools.dynamic]
version = {attr = "eelbrain.__version__"}